--- a/404.html
+++ b/404.html
@@ -4,24 +4,24 @@
 		<title>Jonathan Taylor</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="https://jonathantaylor.info/assets/css/main.css" />
 
-		<link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
-		<link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
-		<link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-icon-72x72.png">
-		<link rel="apple-touch-icon" sizes="76x76" href="favicon/apple-icon-76x76.png">
-		<link rel="apple-touch-icon" sizes="114x114" href="favicon/apple-icon-114x114.png">
-		<link rel="apple-touch-icon" sizes="120x120" href="favicon/apple-icon-120x120.png">
-		<link rel="apple-touch-icon" sizes="144x144" href="favicon/apple-icon-144x144.png">
-		<link rel="apple-touch-icon" sizes="152x152" href="favicon/apple-icon-152x152.png">
-		<link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-icon-180x180.png">
-		<link rel="icon" type="image/png" sizes="192x192"  href="favicon/android-icon-192x192.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="96x96" href="favicon/favicon-96x96.png">
-		<link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
-		<link rel="manifest" href="favicon/manifest.json">
+		<link rel="apple-touch-icon" sizes="57x57" href="https://jonathantaylor.info/favicon/apple-icon-57x57.png">
+		<link rel="apple-touch-icon" sizes="60x60" href="https://jonathantaylor.info/favicon/apple-icon-60x60.png">
+		<link rel="apple-touch-icon" sizes="72x72" href="https://jonathantaylor.info/favicon/apple-icon-72x72.png">
+		<link rel="apple-touch-icon" sizes="76x76" href="https://jonathantaylor.info/favicon/apple-icon-76x76.png">
+		<link rel="apple-touch-icon" sizes="114x114" href="https://jonathantaylor.info/favicon/apple-icon-114x114.png">
+		<link rel="apple-touch-icon" sizes="120x120" href="https://jonathantaylor.info/favicon/apple-icon-120x120.png">
+		<link rel="apple-touch-icon" sizes="144x144" href="https://jonathantaylor.info/favicon/apple-icon-144x144.png">
+		<link rel="apple-touch-icon" sizes="152x152" href="https://jonathantaylor.info/favicon/apple-icon-152x152.png">
+		<link rel="apple-touch-icon" sizes="180x180" href="https://jonathantaylor.info/favicon/apple-icon-180x180.png">
+		<link rel="icon" type="image/png" sizes="192x192"  href="https://jonathantaylor.info/favicon/android-icon-192x192.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="https://jonathantaylor.info/favicon/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="96x96" href="https://jonathantaylor.info/favicon/favicon-96x96.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="https://jonathantaylor.info/favicon/favicon-16x16.png">
+		<link rel="manifest" href="https://jonathantaylor.info/favicon/manifest.json">
 		<meta name="msapplication-TileColor" content="#ffffff">
-		<meta name="msapplication-TileImage" content="favicon/ms-icon-144x144.png">
+		<meta name="msapplication-TileImage" content="https://jonathantaylor.info/favicon/ms-icon-144x144.png">
 		<meta name="theme-color" content="#ffffff">
 
 		<!-- MailerLite Universal -->
@@ -53,51 +53,21 @@
 
 		<!-- Header -->
 			<header id="header" class="alt">
-				<div class="logo"><a href="index">Jonathan <span>Taylor</span></a></div>
+				<div class="logo"><a href="https://jonathantaylor.info/index">Jonathan <span>Taylor</span></a></div>
 				<a href="#menu">Menu</a>
 			</header>
 
 		<!-- Nav -->
 			<nav id="menu">
 				<ul class="links">
-					<li><a href="index">Home</a></li>
-					<li><a href="contact">Contact</a></li>
-					<li><a href="projects">Projects</a></li>
+					<li><a href="https://jonathantaylor.info/index">Home</a></li>
+					<li><a href="https://jonathantaylor.info/contact">Contact</a></li>
+					<li><a href="https://jonathantaylor.info/projects">Projects</a></li>
 					<!--<li><a href="elements ">Producing</a></li>
 					<li><a href="elements ">Photography & Design</a></li>\
 					<li><a href="elements ">Technical Experience</a></li>-->
 				</ul>
 			</nav>
-
-		<!-- Banner -->
-			<section class="banner full">
-				<article>
-					<img src="images/slide01.png" alt="" />
-					<div class="inner">
-						<header>
-						</header>
-					</div>
-				</article>
-
-				<article>
-					<img src="images/slide03.png"  alt="" />
-					<div class="inner">
-
-					</div>
-				</article>
-				<article>
-					<img src="images/slide02.png" alt="" />
-					<div class="inner">
-
-					</div>
-				</article>
-				<article>
-					<img src="images/slide06.png"  alt="" />
-					<div class="inner">
-
-					</div>
-				</article>
-			</section>
 
 
 
@@ -129,11 +99,11 @@
 		</footer>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+			<script src="https://jonathantaylor.info/assets/js/jquery.min.js"></script>
+			<script src="https://jonathantaylor.info/assets/js/jquery.scrollex.min.js"></script>
+			<script src="https://jonathantaylor.info/assets/js/skel.min.js"></script>
+			<script src="https://jonathantaylor.info/assets/js/util.js"></script>
+			<script src="https://jonathantaylor.info/assets/js/main.js"></script>
 
 	</body>
 </html>
