--- a/404.html
+++ b/404.html
@@ -68,14 +68,19 @@
 					<li><a href="elements ">Technical Experience</a></li>-->
 				</ul>
 			</nav>
-
-
-
+            <!-- One -->
+			<section id="One" class="wrapper style3">
+				<div class="inner">
+					<header class="align-center">
+						<h2>Oops!</h2>
+					</header>
+				</div>
+			</section>
 			<section id="two" class="wrapper style2">
 				<div class="inner">
 					<div class="box">
 						<div style="text-align: center" class="content">
-								Oops! This page doesn't seem to exist...
+								This page doesn't seem to exist...
 						</div>
 					</div>
 				</div>
