--- a/contact.html
+++ b/contact.html
@@ -86,7 +86,10 @@
 						<div style="text-align: center" class="content">
 								<a target="_blank" href="mailto:jonathan@jonathantaylor.info" class="button alt">Email Me</a>
 
-								<div id="fb-root"></div>
+							<br>
+							<a target="_blank" href="https://linkedin.com/in/jonathan-taylor-info" class="button alt">View my LinkedIn</a>
+							<br>
+							<a target="_blank" href="https://twitter.com/JonathanTaylorP" class="button alt">Find me on Twitter</a>
       
 						</div>
 					</div>
