--- a/404.html
+++ b/404.html
@@ -72,7 +72,7 @@
 			<section id="One" class="wrapper style3">
 				<div class="inner">
 					<header class="align-center">
-						<h2>Oops!</h2>
+						<h2>Page Not Found!</h2>
 					</header>
 				</div>
 			</section>
